# kiss-mail

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.alpine  README.md  SECURITY.md  docker-compose.yml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  docker.yml  labeler.yml  release.yml  security.yml  stale.yml
deploy/aws/: README.md  main.tf  terraform.tfvars.example  user-data.sh
deploy/azure/: README.md  cloud-init.yml  main.tf  terraform.tfvars.example
deploy/digitalocean/: README.md  main.tf  terraform.tfvars.example  user-data.sh
deploy/gcp/: README.md  main.tf  terraform.tfvars.example
deploy/generic/: README.md  cloud-init.yml
deploy/helm/kiss-mail/: Chart.yaml  values.yaml
deploy/helm/kiss-mail/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/hetzner/: README.md  main.tf  terraform.tfvars.example
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/linode/: README.md  main.tf  terraform.tfvars.example
deploy/scripts/: install.sh  uninstall.sh  upgrade.sh
deploy/vultr/: README.md  main.tf  terraform.tfvars.example
src/: admin.rs  admin_api.rs  admin_web.rs  antispam.rs  antivirus.rs  crypto.rs  groups.rs  imap.rs  ldap.rs  main.rs  pop3.rs  smtp.rs  spam_ai.rs  sso.rs  storage.rs  users.rs
