[package]
name = "kiss-mail"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A KISS (Keep It Simple, Stupid) SMTP, IMAP, and POP3 mail server"
license = "MIT"
authors = ["Pegasus Heavy Industries <contact@pegasusheavy.com>"]
repository = "https://github.com/pegasusheavy/kiss-mail"
homepage = "https://github.com/pegasusheavy/kiss-mail"
documentation = "https://docs.rs/kiss-mail"
readme = "README.md"
keywords = ["email", "smtp", "imap", "pop3", "mail-server"]
categories = ["email", "network-programming", "command-line-utilities"]
exclude = [
    ".github/",
    "deploy/",
    "target/",
    "*.md",
    "!README.md",
    "docker-compose.yml",
    "Dockerfile*",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.9.2", features = ["std"] }
hostname = "0.4.2"
libc = "0.2.179"
clamav-client = "2.2.0"
ldap3 = "0.12.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
password-hash = "0.5.0"
sha2 = "0.10.9"
urlencoding = "2.1.3"
axum = { version = "0.8.8", features = ["json"] }
actix-web = "4.12.1"
actix-rt = "2.11.0"
handlebars = { version = "6.4.0", features = ["dir_source"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }

[dev-dependencies]
tempfile = "3.24.0"
